# multi-context-memory

./: .dockerignore  .env.example  .env.example.minimal  .gitignore  ANALYSIS_REPORT.md  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETE_PROJECT_DEMONSTRATION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  INSTALL.md  KNOWLEDGE_RETRIEVAL_UPGRADE.md  LICENSE  NOTICE  PROJECT_PROTECTION.md  README.md  SECURITY.md  TROUBLESHOOTING.md  The writers Journey.md  add_copyright_headers.py  docker-compose.yml  kilo_config.json  pyproject.toml  requirements-lock.txt  requirements-minimal.txt  requirements.txt  test_kilo_integration.py
.github/workflows/: ci.yml  copyright-protection.yml  license-compliance.yml
community-telemetry/: README.md
deprecated/: enhanced_memory_db.py  mcp_stdio_server.py  memory.py  server.py
docs/: AVAILABLE_TOOLS.md  CLIENT_EXAMPLES.md  COMPREHENSIVE_MCP_TOOLS_DEMONSTRATION.md  ENHANCED_SYSTEM_INTEGRATION.md  KNOWLEDGE_INTEGRATION.md  PRIVACY.md  REPOSITORY_STATUS.md  USAGE.md
docs/architecture/: final-implementation-summary.md  project-structure.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/setup/: KILO_INTEGRATION.md  MCP_DOCKER_SETUP.md
docs/troubleshooting/: DEBUG_LOG.md  FIX_TOOL_USAGE.md
examples/: README.md
examples/basic/: 01_simple_memory.py  02_search_memories.py
scripts/: aggregate-telemetry.js  benchmark-caching.js  benchmark-caching.ts  generate-insights-report.js  health_check.sh  index_existing_memories.py  package.json  update-readme-insights.js  validate-caching-performance.js  validate-caching-performance.mjs  validate-telemetry-schema.js  verify_mcp_connection.py
src/: mcp_server.py  mcp_server_minimal.py  mcp_stdio_server.py
src/api/: __init__.py  dependencies.py  main.py  main_minimal.py
src/api/controllers/: __init__.py  memory_controller.py
src/api/routers/: admin.py  auth.py  contexts.py  memories.py  tools.py
src/api/routes/: __init__.py  admin.py  auth.py  config.py  context.py  health.py  memory.py  monitoring.py  relation.py
src/api/schemas/: __init__.py  admin.py  auth.py  config.py  context.py  memory.py  relation.py  user.py
src/api/services/: __init__.py  memory_service.py
src/archiving/: __init__.py  archival_manager.py
src/backup/: backup_manager.py
src/batch/: BatchOptimizedManager.ts
src/config/: __init__.py  logging.py  settings.py
src/context/: ContextManager.ts
src/database/: __init__.py  db_interface.py  enhanced_memory_db.py  migration_add_access_fields.py  models.py  refactored_memory_db.py  session.py
src/database/interfaces/: __init__.py  repository.py  service.py  storage_strategy.py
src/database/repositories/: __init__.py  context_repository.py  memory_repository.py  relation_repository.py
src/database/strategies/: __init__.py  chunked_storage_strategy.py  compression_strategy.py
src/deduplication/: __init__.py  deduplication_manager.py
src/extension/: __init__.py  client.py
src/graph/: CachedKnowledgeGraphManager.ts  EnhancedKnowledgeGraphManager.ts  LazyEntity.ts  LazyLoadingManager.ts  MemoryOptimizedManager.ts  OptimizedKnowledgeGraphManager.ts
src/handlers/: contextHandlers.ts
src/mcp/: __init__.py  command_factory.py  refactored_server.py  refactored_stdio_server.py  server.py
src/mcp/commands/: __init__.py  base_command.py  memory_commands.py
src/mcp/handlers/: __init__.py  advanced_handler.py  base_handler.py  context_handler.py  memory_handler.py  relations_handler.py
src/migration/: README.md  __init__.py  jsonl_to_sqlite.py  migration_manager.py  run_migration.py  validation.py
src/monitoring/: baseline_collector.py  dashboard.py  memory_monitor.py  performance_monitor.py
src/rollback/: rollback_manager.py
src/schemas/: __init__.py  admin.py  auth.py  config.py  context.py  memory.py  relation.py
src/search/: FullTextSearchManager.ts
src/services/: __init__.py  cache_service.py  embedding_service.py  knowledge_retrieval_service.py  vector_store_service.py
src/storage/: __init__.py  chunked_storage.py  distributed_storage_manager.py  hybrid_storage.py
src/telemetry/: TelemetryManager.ts
src/tools/: contextTools.ts  telemetryTools.ts
src/types/: context.ts  graph.ts
src/utils/: __init__.py  admin.py  auth.py  compression.py  email.py  error_handling.py  logger.py  text_processing.py
tests/: README.md  run_test_new_data.py  test_config.py  test_integration.py  test_migration.py  test_new_data.py
tests/data/: README.md
