[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-multi-context-memory"
version = "2.0.0"
description = "Enhanced MCP Multi-Context Memory System with SQLite backend"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VoiceLessQ", email = "t12kaem@gmail.com"},
]
maintainers = [
    {name = "VoiceLessQ", email = "t12kaem@gmail.com"},
]
keywords = ["mcp", "memory", "context", "sqlite", "fastapi", "vscode", "extension", "ai", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy[asyncio]==2.0.23",
    "alembic==1.12.1",
    "aiofiles==23.2.1",
    "aiosqlite==0.19.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "sentence-transformers==2.2.2",
    "transformers==4.35.2",
    "torch==2.1.1",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.2",
    "whoosh==2.7.4",
    "nltk==3.8.1",
    "spacy==3.7.2",
    "websockets==12.0",
    "httpx==0.25.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "PyYAML==6.0.1",
    "structlog==23.2.0",
    "click==8.1.7",
    "rich==13.7.0",
    "tqdm==4.66.1",
    "python-dateutil==2.8.2",
    "cryptography==41.0.7",
    "pycryptodome==3.19.0",
    "orjson==3.9.10",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.2",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.2",
    "responses>=0.24.1",
    "freezegun>=1.2.2",
    "pytest-benchmark>=4.0.0",
]
optional = [
    # Vector database integrations
    "chromadb>=0.4.18",
    "pinecone-client>=2.2.4",
    "weaviate-client>=3.24.1",
    # Cloud storage
    "boto3>=1.34.0",
    "azure-storage-blob>=12.19.0",
    "google-cloud-storage>=2.10.0",
    # Monitoring and observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    # Caching
    "redis>=5.0.1",
    "aiocache>=0.12.1",
    # Background tasks
    "celery>=5.3.4",
    "dramatiq>=1.15.0",
    # API documentation
    "swagger-ui-py>=0.2.9",
    # Data validation
    "cerberus>=1.3.4",
    "jsonschema>=4.20.0",
    # Serialization
    "msgpack>=1.0.7",
    "pydantic-extra-types>=2.4.1",
    # CLI
    "typer>=0.9.0",
    "rich-cli>=13.7.0",
    # Jupyter notebooks (development)
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
    # Profiling
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.1",
    "py-spy>=0.3.14",
    # Benchmarking
    "locust>=2.17.0",
    "pytest-benchmark>=4.0.0",
    # Mocking
    "responses>=0.24.1",
    "freezegun>=1.2.2",
    # Time handling
    "python-timezone>=2023.3",
    "pytz>=2023.3",
    # URL handling
    "furl>=2.1.3",
    "yarl>=1.9.4",
    # Email
    "aiosmtplib>=3.0.1",
    "email-validator>=2.1.0",
    # File handling
    "python-magic>=0.4.27",
    "filetype>=1.2.0",
    # Image processing
    "pillow>=10.1.0",
    "opencv-python>=4.8.1.78",
    # Audio processing
    "pydub>=0.25.1",
    "librosa>=0.10.1",
    # Video processing
    "moviepy>=1.0.3",
    # PDF processing
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.9.1",
    # Document processing
    "python-docx>=1.1.0",
    "python-docx2txt>=0.14",
    "python-docx-template>=0.15.0",
    # Spreadsheet processing
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
    # Database migrations
    "alembic>=1.12.1",
    "flyway>=7.15.0",
    # Task scheduling
    "schedule>=1.2.0",
    "apscheduler>=3.10.4",
    # Event handling
    "blinker>=1.6.3",
    "eventlet>=0.33.3",
    # Concurrency
    "anyio>=4.0.0",
    "trio>=0.23.2",
    # Async programming
    "async-timeout>=4.0.3",
    "aiolimiter>=1.1.0",
    # Rate limiting
    "slowapi>=0.1.9",
    "fastapi-limiter>=0.1.5",
    # Caching
    "cachetools>=5.3.2",
    "cattrs>=23.2.3",
    # Serialization
    "marshmallow>=3.20.1",
    "attrs>=23.2.0",
    # Validation
    "voluptuous>=0.15.2",
    "cerberus>=1.3.4",
    # CLI
    "click>=8.1.7",
    "rich>=13.7.0",
    "typer>=0.9.0",
    # Logging
    "structlog>=23.2.0",
    "loguru>=0.7.2",
    # Monitoring
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    # Tracing
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.41b0",
    # Metrics
    "prometheus-client>=0.19.0",
    "statsd>=3.3.0",
    # Health checks
    "fastapi-health>=0.5.1",
    # CORS
    "fastapi[all]>=0.104.1",
    # Middleware
    "slowapi>=0.1.9",
    "fastapi.middleware.cors>=0.0.0",
    "fastapi.middleware.trustedhost>=0.0.0",
    "fastapi.middleware.gzip>=0.0.0",
    "fastapi.middleware.httpsredirect>=0.0.0",
    # Security
    "fastapi[all]>=0.104.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "authlib>=1.2.1",
    "python-oauth2>=1.1.0",
    # API documentation
    "fastapi[all]>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-multi-context-memory"
Documentation = "https://mcp-multi-context-memory.readthedocs.io/"
Repository = "https://github.com/yourusername/mcp-multi-context-memory.git"
"Bug Tracker" = "https://github.com/yourusername/mcp-multi-context-memory/issues"

[project.scripts]
mcp-memory = "src.cli.main:app"
mcp-migrate = "src.migration.cli:main"
mcp-server = "src.api.main:main"
mcp-test = "src.testing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "bcrypt.*",
    "sentence_transformers.*",
    "transformers.*",
    "torch.*",
    "nltk.*",
    "spacy.*",
    "whoosh.*",
    "websockets.*",
    "aiofiles.*",
    "aiosqlite.*",
    "prometheus_client.*",
    "opentelemetry.*",
    "redis.*",
    "celery.*",
    "dramatiq.*",
    "boto3.*",
    "azure.*",
    "google.*",
    "chromadb.*",
    "pinecone.*",
    "weaviate.*",
    "opencv.*",
    "PIL.*",
    "pydub.*",
    "librosa.*",
    "moviepy.*",
    "PyPDF2.*",
    "pdfplumber.*",
    "python_docx.*",
    "openpyxl.*",
    "xlrd.*",
    "xlwt.*",
    "alembic.*",
    "flyway.*",
    "schedule.*",
    "apscheduler.*",
    "blinker.*",
    "eventlet.*",
    "anyio.*",
    "trio.*",
    "slowapi.*",
    "fastapi_limiter.*",
    "cachetools.*",
    "cattrs.*",
    "marshmallow.*",
    "attrs.*",
    "voluptuous.*",
    "cerberus.*",
    "structlog.*",
    "loguru.*",
    "psutil.*",
    "statsd.*",
    "fastapi_health.*",
    "authlib.*",
    "python_oauth2.*",
    "mkdocs.*",
    "mkdocs_material.*",
    "mkdocs_mermaid2_plugin.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/migrations/*",
    "*/alembic/*",
    "*/venv/*",
    "*/env/*",
    "*/.tox/*",
    "*/build/*",
    "*/dist/*",
    "*/docs/*",
    "*/scripts/*",
    "*/examples/*",
    "*/demo/*",
    "*/benchmark/*",
    "*/performance/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".tox",
    ".eggs",
    "*.egg",
    ".venv",
    ".env",
    ".mypy_cache",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
    ".vscode",
    ".idea",
    "*.log",
    "*.tmp",
    "*.bak",
    "*.swp",
    "*.swo",
    "*.orig",
    "*.rej",
    "*.patch",
    "*.diff",
    "*.DS_Store",
    "Thumbs.db",
    "node_modules",
    "site-packages",
    "dist-packages",
    "local/lib",
    "lib/python*/site-packages",
    "lib64/python*/site-packages",
    "usr/lib/python*/site-packages",
    "usr/local/lib/python*/site-packages",
    "opt/*/lib/python*/site-packages",
    "System Volume Information",
    "Recycle Bin",
    "Temporary Internet Files",
    "Application Data",
    "AppData",
    "Desktop.ini",
    "Folder.htt",
    "thumbs.db",
    "desktop.ini",
    "IconCache.db",
    "MuiCache.db",
    "UserClass.dat",
    "UsrClass.dat",
    "WebCacheV01.dat",
    "WebCacheV01.old",
    "WebCacheV01.bak",
    "WebCacheV01.tmp",
    "WebCacheV01.jfm",
    "WebCacheV01.edb",
    "WebCacheV01.log",
    "WebCacheV01.trn",
    "WebCacheV01.chk",
]